added account functionality (#201)
